--- a/web/src/app/modules/shopping/products/product-details/product-details.component.html
+++ b/web/src/app/modules/shopping/products/product-details/product-details.component.html
@@ -4,7 +4,7 @@
 
       <div class="card-header row">
         <div class="col-md-6">
-          <button type="submit" class="btn btn-primary">
+          <button type="submit" class="btn btn-primary" (click)="addToCart({})">
             <i class="fa fa-cart-plus fa-lg"></i>
           </button>
         </div>
