--- a/web/src/app/modules/shopping/products/product-catalog-list/product-catalog-list.component.html
+++ b/web/src/app/modules/shopping/products/product-catalog-list/product-catalog-list.component.html
@@ -11,7 +11,7 @@
     <div class="col-12">
       <div class="collapse row" id="collapseSearch">
         <div class="card card-body col-md-12 col-sm-12 adv-search-crd">
-            <form [formGroup]="searchForm" (ngSubmit)="OnSubmit()">
+          <form [formGroup]="searchForm" (ngSubmit)="OnSubmit()">
 
             <fieldset>
               <div class="form-group">
@@ -56,10 +56,10 @@
                 </div>
               </div>
             </fieldset>
-            <button type="submit" class="btn btn-primary" >
+            <button type="submit" class="btn btn-primary">
               <i class="fa fa-search-plus"></i> Search
             </button> &nbsp;
-            <button type="button" class="btn btn-primary" (click)="clear()" >
+            <button type="button" class="btn btn-primary" (click)="clear()">
               <i class="fa fa-eraser" aria-hidden="true"></i> clear
             </button>
           </form>
@@ -68,29 +68,31 @@
     </div>
     <!-- Products Catalog -->
     <div class="row">
-      <div  *ngFor="let product of (lstProduct | async)?.data" class="col-xs-12 col-md-4 col-sm-6 hh-50 product-box-lg">
+      <div *ngFor="let product of (lstProduct | async)?.data" class="col-xs-12 col-md-4 col-sm-6 hh-50 product-box-lg">
         <div class="img-box">
           <a [routerLink]="['/product', product.id]">
             <img src="../../../../../assets/images/p1.jpg" class="prd-img-lg">
-            <div class="brd img-box-p r-btm-5 shw-hdn col-12">
+          </a>
+          <div class="brd img-box-p r-btm-5 shw-hdn col-12">
+            <a [routerLink]="['/product', product.id]">
               <div class="row">
                 <div class="head-text col-9">{{product.name}}</div>
                 <div class="col-3"></div>
                 <div class="prd-cat-price">${{product.price}}</div>
               </div>
               <div class="details-text row">{{product.shortDescription}}</div>
+            </a>
 
-              <div class="add-cart">
-                <button type="submit" class="btn btn-primary btn-add-cart">
-                  <i class="fa fa-cart-plus fa-lg"></i>
-                </button>
-              </div>
+            <div class="add-cart">
+              <button type="submit" class="btn btn-primary btn-add-cart" (click)="addToCart(product)">
+                <i class="fa fa-cart-plus fa-lg"></i>
+              </button>
             </div>
-          </a>
+          </div>
         </div>
       </div>
-      </div>
     </div>
+  </div>
 
 
 </div>
