Change design, product list, approve product, cart, List users

--- a/web/src/app/modules/admin/manage-product/approve-product/approve-product.component.html
+++ b/web/src/app/modules/admin/manage-product/approve-product/approve-product.component.html
@@ -1,4 +1,5 @@
 <h3 style="margin-top: 40px;">Pending Products</h3>
+
 <table class="table table-hover" style="table-layout: fixed;">
   <thead>
     <tr>
@@ -18,29 +19,12 @@
       <td scope="col">{{product.description}}</td>
       <td scope="col">{{product.price | currency}}</td>
       <td>{{product.vendorName}}</td>
-      <td> <button class="btn btn-success" type="button"  (click)="OnAprove(product.id)"  >Approve</button> </td>
-      <td> <button class="btn btn-danger" type="button" (click)="OnReject(product.id)">Reject</button></td>
+      <td> <button class="btn success-color" type="button"  (click)="OnAprove(product.id)" >
+        <i class="fa fa-check" aria-hidden="true">&nbsp;Approve</i>
+      </button> </td>
+      <td> <button class="btn danger-color" type="button" (click)="OnReject(product.id)">
+        <i class="fa fa-times" aria-hidden="true">&nbsp;Reject</i>
+      </button></td>
     </tr>
-
-    <!-- <tr *ngFor="let product of (lstProduct | async)?.data" class="table-secondary">
-      <td>{{product.name}}</td>
-      <td scope="col"  style=" word-wrap: break-word;"><p> {{product.shortDescription}}</p></td>
-      <td scope="col">Lorem ipsum dolor sit amet, pro expetenda argumentum in, vim facer scripserit ea. Vim ad partem commodo constituto, nec liber expetenda expetendis ex. Pri an iriure adipisci erroribus. Eos ut melius malorum virtute, autem mazim torquatos cu vis. Nemore assentior ei vis, te imperdiet cotidieque per. Te sed adhuc atqui graeco, eos fuisset expetenda vulputate ut.</td>
-      <td scope="col">$100</td>
-      <td>Vendor 1</td>
-      <td> <button class="btn btn-success" type="button">Approve</button> </td>
-      <td> <button class="btn btn-danger" type="button">Reject</button></td>
-    </tr>
-
-    <tr class="table-secondary">
-      <td>Product 3</td>
-      <td scope="col">Short Description</td>
-      <td scope="col">Lorem ipsum dolor sit amet, pro expetenda argumentum in, vim facer scripserit ea. Vim ad partem commodo constituto, nec liber expetenda expetendis ex. Pri an iriure adipisci erroribus. Eos ut melius malorum virtute, autem mazim torquatos cu vis. Nemore assentior ei vis, te imperdiet cotidieque per. Te sed adhuc atqui graeco, eos fuisset expetenda vulputate ut.</td>
-      <td scope="col">$100</td>
-      <td>Vendor 2</td>
-      <td> <button class="btn btn-success" type="button">Approve</button> </td>
-      <td> <button class="btn btn-danger" type="button">Reject</button></td>
-    </tr> -->
-
   </tbody>
 </table>
