Update order model + product details page

--- a/web/src/app/modules/admin/manage-product/edit-product/edit-product.component.html
+++ b/web/src/app/modules/admin/manage-product/edit-product/edit-product.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="card col-md-8">
-      <div class="card-header">Create Product</div>
+      <div class="card-header">Edit Product</div>
       <div class="card-body">
         <form [formGroup]="form">
           <fieldset>
