--- a/web/src/app/modules/admin/manage-category/add-category/add-category.component.html
+++ b/web/src/app/modules/admin/manage-category/add-category/add-category.component.html
@@ -1,17 +1,17 @@
 <main class="acc-form">
 
   <div class="container">
-    <div class="row justify-content-center mb-1">
-      <div class="col-10">
+    <div class="row justify-content-center mb-1 mx-2">
+      <div class="col">
         <h4>Admin Category</h4>
       </div>
-      <div class="col-2">
-        <button type="button" class="btn btn-primary">Save</button>
-      </div>
+<!--      <div class="col-2">-->
+<!--        <button type="button" class="btn btn-primary">Save</button>-->
+<!--      </div>-->
     </div>
     <div class="row justify-content-center">
       <div class="col">
-        <div class="col-md">
+        <div class="col">
           <div class="card">
             <div class="card-header">Add Category</div>
             <div class="card-body">
