--- a/web/src/app/modules/admin/manage-category/edit-category/edit-category.component.html
+++ b/web/src/app/modules/admin/manage-category/edit-category/edit-category.component.html
@@ -1,1 +1,46 @@
-<p>edit-category works!</p>
+<main class="acc-form">
+
+  <div class="container">
+    <div class="row justify-content-center mb-1 mx-2">
+      <div class="col">
+        <h4>Admin Category</h4>
+      </div>
+      <!--      <div class="col-2">-->
+      <!--        <button type="button" class="btn btn-primary">Save</button>-->
+      <!--      </div>-->
+    </div>
+    <div class="row justify-content-center">
+      <div class="col">
+        <div class="col">
+          <div class="card">
+            <div class="card-header">Edit Category</div>
+            <div class="card-body">
+              <form [formGroup]="categoryForm" >
+                <div class="form-group row">
+                  <label for="category" class="col-md-4 col-form-label text-md-right">Category</label>
+                  <div class="col-md-6">
+                    <input type="text"
+                           [formControl]="categoryForm.get('category')"
+                           [ngClass]="{'is-invalid': isValid('category')}"
+                           id="category"
+                           class="form-control"
+                           name="category" autofocus>
+                    <div *ngIf="hasError('category')" class="invalid-feedback">
+                      category is required
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-md-6 offset-md-4">
+                  <button class="btn btn-primary" (click)="onSubmit()" >Save</button>
+                </div>
+
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</main>
+
