rejected-product done, awaiting implementation on backend

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -28,6 +28,7 @@
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" [routerLink]="['product-list']">Manage Products</a>
             <a class="dropdown-item" [routerLink]="['approve-product']">Review Products</a>
+            <a class="dropdown-item" [routerLink]="['rejected-product']">Rejected Products</a>
             <a class="dropdown-item" [routerLink]="['categories']">Manage Categories</a>
 
           </div>
