--- a/web/src/app/modules/admin/manage-product/rejected-project/rejected-project.component.html
+++ b/web/src/app/modules/admin/manage-product/rejected-project/rejected-project.component.html
@@ -3,12 +3,12 @@
   <thead>
   <tr>
     <th>#</th>
-    <th style="width: 10%;"scope="col" nowrap>Product Name</th>
-    <th style="width: 20%;"scope="col">Short Description</th>
-    <th style="width: 40%;" scope="col">Description</th>
-    <th style="width: 5%;"scope="col">Price</th>
+    <th scope="col" nowrap>Product Name</th>
+    <th scope="col">Short Description</th>
+<!--    <th style="width: 40%;" scope="col">Description</th>-->
+    <th scope="col">Price</th>
     <th scope="col">Vendor</th>
-    <th style="width: 15%;"scope="col" colSpan="2">Actions</th>
+    <th scope="col" colSpan="1">Actions</th>
   </tr>
   </thead>
   <tbody>
@@ -17,7 +17,7 @@
     <td>{{i+1}}</td>
     <td scope="col" nowrap>{{product.name}}</td>
     <td  scope="col">{{product.shortDescription}}</td>
-    <td scope="col">{{product.description}}</td>
+<!--    <td scope="col">{{product.description}}</td>-->
     <td scope="col">${{product.price}}</td>
     <td>{{product.vendorName}}</td>
     <td> <button class="btn btn-success" type="button"  (click)="OnAprove(product.id)"  >Approve</button> </td>
