--- a/web/src/app/modules/admin/manage-product/product-list/product-list.component.html
+++ b/web/src/app/modules/admin/manage-product/product-list/product-list.component.html
@@ -1,8 +1,16 @@
 
 
 <div class="container">
-  <div class="row">
-    <div class="col-sm-12 col-md-8 mr-btm-10">
+
+  <h3 style="margin-top: 40px;">Products</h3>
+
+
+
+
+
+
+<!--  <div class="row">
+     <div class="col-sm-12 col-md-8 mr-btm-10">
       <div class="form-group col-sm-12 col-md-10 mr-btm-10">
         <input type="text" class="form-control" placeholder="Search Here" [(ngModel)]="search">
       </div>
@@ -12,9 +20,20 @@
         <i class="fa fa-plus" aria-hidden="true"></i> Add Product
       </a>
     </div>
-  </div>
+  </div> -->
   <div class="row">
     <div   class="col-sm-12 col-md-8 order-line-box">
+
+      <div class="row">
+        <div class="form-group col-sm-12 col-md-10 mr-btm-10">
+          <input type="text" class="form-control" placeholder="Search by name here" [(ngModel)]="search">
+        </div>
+        <div class="col-sm-12 col-md-2 mr-btm-10">
+          <a [routerLink]="['/add-product']" class="btn btn-flat">
+            <i class="fa fa-plus" aria-hidden="true"></i> Add Product
+          </a>
+        </div>
+      </div>
 
       <!--      <c:forEach var="product" items="${products}">-->
       <div *ngFor="let product of (lstProduct | async)?.data | filter:search" class="card custom-card-border mb-3">
@@ -40,15 +59,23 @@
             <p class="card-text">{{product.shortDescription}}</p>
           </div>
           <div class="order-line-cmd row">
-            <div class="prodcut-cmd-icon ">
-              <button type="button" class="btn btn-flat success-color">
-                <i class="fa fa-upload" aria-hidden="true"></i> Upload
+            
+            <div class="prodcut-cmd-icon " *ngIf="!product.published"> 
+            
+              <button type="button" class="btn btn-flat success-color" (click)="published(product.id)">
+                <i class="fa fa-upload" aria-hidden="true"></i> Enable
+              </button>
+            </div>
+
+            <div class="prodcut-cmd-icon "  *ngIf="product.published">
+              <button type="button" class="btn btn-flat danger-color" (click)="unPublished(product.id)">
+                <i class="fa fa-download" aria-hidden="true"></i> Disable
               </button>
             </div>
 
             <div class="prodcut-cmd-icon ">
-              <button type="button" class="btn btn-flat danger-color">
-                <i class="fa fa-download" aria-hidden="true"></i> Download
+              <button type="button" class="btn btn-flat danger-color" (click)="delete(product.id)">
+                <i class="fa fa-download" aria-hidden="true"></i> Delete
               </button>
             </div>
 
