--- a/web/src/app/modules/admin/manage-product/rejected-project/rejected-project.component.html
+++ b/web/src/app/modules/admin/manage-product/rejected-project/rejected-project.component.html
@@ -20,7 +20,7 @@
 <!--    <td scope="col">{{product.description}}</td>-->
     <td scope="col">${{product.price}}</td>
     <td>{{product.vendorName}}</td>
-    <td> <button class="btn btn-success" type="button"  (click)="OnAprove(product.id)"  >Approve</button> </td>
+    <!-- <td> <button class="btn btn-success" type="button"  (click)="OnAprove(product.id)"  >Approve</button> </td> -->
   </tr>
 
   </tbody>
