--- a/web/src/app/modules/shopping/cart/cart.component.html
+++ b/web/src/app/modules/shopping/cart/cart.component.html
@@ -39,9 +39,9 @@
                [routerLink]="['/product', orderItem.product.id]">
           <div class="col-9">
             <a [routerLink]="['/product', orderItem.product.id]">
-              <h4 class="card-title underline-text">{{orderItem.product.name}}</h4>
+              <h5 class="card-title underline-text">{{orderItem.product.name}}</h5>
 
-              <p class="card-text body-color underline-text">{{orderItem.product.shortDescription}}</p>
+              <p class="card-text body-color underline-text" style="font-size: 13px;">{{orderItem.product.shortDescription}}</p>
             </a>
 
           </div>
