--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -33,6 +33,23 @@
 
           </div>
         </li>
+
+        <li class="nav-item dropdown" *ngIf="authService.isAuthenticated">
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="admin" aria-expanded="false">
+            Reports <span class="caret"></span>
+          </a>
+          <div class="dropdown-menu" aria-labelledby="admin">
+            <a class="dropdown-item" [routerLink]="['manage-users']">My Orders</a>
+            <a class="dropdown-item" [routerLink]="['manage-users']">My Profits</a>
+            <div class="dropdown-divider"></div>
+<!--            <a class="dropdown-item" [routerLink]="['product-list']">Manage Products</a>-->
+<!--            <a class="dropdown-item" [routerLink]="['approve-product']">Review Products</a>-->
+<!--            <a class="dropdown-item" [routerLink]="['rejected-product']">Rejected Products</a>-->
+<!--            <a class="dropdown-item" [routerLink]="['categories']">Manage Categories</a>-->
+
+          </div>
+        </li>
+
       </ul>
       <div class="m-2">
         <!-- Cart  -->
