Email Service, Emails for signup, approve/reject Products

--- a/web/src/app/modules/shopping/products/product-details/product-details.component.html
+++ b/web/src/app/modules/shopping/products/product-details/product-details.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="card cus-bar mb-3 pd mr-min-">
+    <div class="card cus-bar mb-3 pd mr-min- col-12">
 
       <div class="card-header row">
         <div class="col-md-6">
